layout bug fixed

--- a/src/app/home/categories/categories.component.scss
+++ b/src/app/home/categories/categories.component.scss
@@ -39,8 +39,8 @@
     width: 100%;
     flex-wrap: wrap;
     align-items: center;
+    z-index:1;
     position: relative;
-    bottom: 35vh;
   }
   
   .row {
