--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,6 +2,7 @@
   width: 100%;
   min-height: 90vh;
   background-color: #eaeded;
+  position: absolute;
 }
 
 
